<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
    <LinearLayout
            android:id="@+id/container"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <app.colorrr.colorrr.views.TextViewSemiBold
                android:id="@+id/filter_all"
                android:layout_width="110dp"
                android:layout_height="42dp"
                android:tag="0"
                android:gravity="center"
                android:textColor="@color/pinkish_grey"
                android:text="@string/All"/>
        <app.colorrr.colorrr.views.TextViewSemiBold
                android:id="@+id/filter_popular"
                android:layout_width="110dp"
                android:layout_height="42dp"
                android:tag="1"
                android:gravity="center"
                android:textColor="@color/pinkish_grey"
                android:text="@string/Popular"/>
        <app.colorrr.colorrr.views.TextViewSemiBold
                android:id="@+id/filter_premium"
                android:layout_width="110dp"
                android:layout_height="42dp"
                android:tag="2"
                android:gravity="center"
                android:textColor="@color/pinkish_grey"
                android:text="@string/Premium"/>
        <app.colorrr.colorrr.views.TextViewSemiBold
                android:id="@+id/filter_free"
                android:layout_width="110dp"
                android:layout_height="42dp"
                android:tag="3"
                android:gravity="center"
                android:textColor="@color/pinkish_grey"
                android:text="@string/Free"/>
        <app.colorrr.colorrr.views.TextViewSemiBold
                android:id="@+id/filter_recommended"
                android:layout_width="110dp"
                android:layout_height="42dp"
                android:tag="4"
                android:gravity="center"
                android:textColor="@color/pinkish_grey"
                android:text="@string/Recommended"/>
        <app.colorrr.colorrr.views.TextViewSemiBold
                android:id="@+id/filter_for_kids"
                android:layout_width="110dp"
                android:layout_height="42dp"
                android:tag="5"
                android:gravity="center"
                android:textColor="@color/pinkish_grey"
                android:text="@string/for_kids"/>
    </LinearLayout>
</HorizontalScrollView>