<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">
    <app.colorrr.colorrr.views.TextViewSemiBold
            android:id="@+id/filter_all"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:tag="0"
            android:gravity="center"
            android:textColor="@color/pinkish_grey"
            android:text="@string/All"
            android:layout_weight="1"/>
    <app.colorrr.colorrr.views.TextViewSemiBold
            android:id="@+id/filter_popular"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:tag="1"
            android:gravity="center"
            android:textColor="@color/pinkish_grey"
            android:text="@string/Popular"
            android:layout_weight="1"/>
    <app.colorrr.colorrr.views.TextViewSemiBold
            android:id="@+id/filter_followed"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:tag="2"
            android:gravity="center"
            android:textColor="@color/pinkish_grey"
            android:text="@string/Followed"
            android:layout_weight="1"/>
</LinearLayout>