<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background_sky"
            android:scaleType="centerCrop"/>

    <ImageView
            android:layout_width="291dp"
            android:layout_height="146dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ornament_up"/>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="49.5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/illumination"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:gravity="center">
        <ImageView
                android:layout_width="104dp"
                android:layout_height="108dp"
                android:layout_marginBottom="18dp"
                android:src="@drawable/logo_2"/>

        <app.colorrr.colorrr.views.TextViewSemiBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white_two"
                android:text="@string/COLORRR"
                android:gravity="center_horizontal"/>
    </LinearLayout>

    <app.colorrr.colorrr.views.TextViewRegular
            android:id="@+id/login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="5dp"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/email_login"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="365dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@drawable/area"/>

        <ImageView
                android:layout_width="305dp"
                android:layout_height="153dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:scaleType="fitEnd"
                android:src="@drawable/ornament_down"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentBottom="true">
            <app.colorrr.colorrr.views.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:textSize="12sp"
                    android:text="@string/continue_with"
                    android:textColor="@color/darkish_pink"/>

            <app.colorrr.colorrr.views.ButtonSemiBold
                    android:id="@+id/login_facebook"
                    android:layout_width="238dp"
                    android:layout_height="100dp"
                    android:paddingTop="25dp"
                    android:gravity="center_horizontal|top"
                    android:text="@string/Facebook"
                    android:textColor="@drawable/button_colored_text"
                    android:background="@drawable/button_facebook"/>

            <app.colorrr.colorrr.views.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-30dp"
                    android:text="@string/OR"
                    android:textSize="12sp"
                    android:textColor="@color/darkish_pink"/>

            <app.colorrr.colorrr.views.ButtonSemiBold
                    android:id="@+id/login_create"
                    android:layout_width="238dp"
                    android:layout_height="100dp"
                    android:paddingTop="25dp"
                    android:layout_marginTop="-3dp"
                    android:gravity="center_horizontal|top"
                    android:text="@string/create_account"
                    android:textColor="@drawable/button_white_text"
                    android:background="@drawable/button_white"/>

            <app.colorrr.colorrr.views.ButtonSemiBold
                    android:id="@+id/login_skip"
                    android:layout_width="238dp"
                    android:layout_height="100dp"
                    android:paddingTop="25dp"
                    android:layout_marginTop="-32dp"
                    android:gravity="center_horizontal|top"
                    android:text="@string/Skip"
                    android:textColor="@drawable/button_white_text"
                    android:background="@drawable/button_white"/>
            <LinearLayout
                    android:id="@+id/tos"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-3dp"
                    android:gravity="center">
                <app.colorrr.colorrr.views.TextViewLight
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/by_continuing_you_agree_with_our"
                        android:textSize="10.5sp"
                        android:textColor="@color/darkish_pink"
                        android:gravity="center_horizontal"/>
                <app.colorrr.colorrr.views.TextViewSemiBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_and_conditions"
                        android:textSize="10.5sp"
                        android:textColor="@color/darkish_pink"
                        android:gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
            android:id="@+id/tos_stub"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@color/black05"/>
    <RelativeLayout
            android:id="@+id/tos_window"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="160dp"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:background="@drawable/corners_top15_white">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <app.colorrr.colorrr.views.TextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/terms_and_conditions"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="16sp"/>

            <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="8dp">
                <app.colorrr.colorrr.views.TextViewRegular
                        android:id="@+id/tos_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_and_conditions"
                        android:textColor="@color/black"
                        android:textSize="12sp"/>
            </ScrollView>
        </LinearLayout>
        <ImageView
                android:id="@+id/tos_close"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:padding="3dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="6dp"
                android:src="@drawable/close_button"/>
    </RelativeLayout>

    <include layout="@layout/_loader"/>
</RelativeLayout>